<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@drawable/bg_rounded_background">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="@dimen/telescopes_column_width"
            android:layout_height="@dimen/telescopes_column_width"
            android:contentDescription="@string/star_image_description"
            android:src="@drawable/star_jupiter" />

        <TextView
            android:id="@+id/statusTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_rounded_background"
            android:text="@string/star_status_example"
            android:textColor="@color/white"
            android:textSize="@dimen/planStatusText" />

        <ImageView
            android:id="@+id/statusImage"
            android:layout_width="@dimen/status_width"
            android:layout_height="@dimen/status_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/status_image_description"
            android:src="@drawable/status_prepared" />

    </RelativeLayout>
 
    <TextView
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/star_name_example"
        android:textColor="@color/white"
        android:textSize="@dimen/starText"
        android:textStyle="bold" >

    </TextView>
 
</LinearLayout>
